<resources>
    <string name="app_name">Smart Key</string>
    <string name="select_function">Select Function</string>


    <!-- add lhr 20170119  -->
    <string name="open_an_app">Open an app</string>
    <string name="camera">Camera</string>
    <string name="beauty_selfie">Beauty Selfie</string>
    <string name="click_accelerate">1-click accelerate</string>
    <string name="notification_bar">Notification bar</string>
    <string name="screenshot">Screenshot</string>
    <string name="flash_light">Torch</string>
    <string name="standby_camera">Standby-Camera</string>
    <string name="open_an_url">Open an URL...</string>
    <string name="call_phone">Make a call to...</string>
    <string name="listen_to_radio">Listen to a radio station...</string>
    <string name="share_pic_to_facebook">CAM to Facebook</string>
    <string name="sos">SOS</string>

    <string name="no_add_any_function">No shortcut added.</string>
    <string name="add_now">Add Now</string>

    <!-- 主界面文案 -->
    <string name="openmenu">Open menu</string>
    <string name="smartkey">Smart Key</string>
    <string name="set_functions">Set functions of the button on the back</string>
    <string name="click">Set 1-click</string>
    <string name="double_click">Set 2-click</string>
    <string name="long_click">Set long-press</string>
    <string name="toolbar_title_choose_function">Select a function</string>

    <!-- 设置文案 -->
    <string name="smart_key_settings">Smart Key Settings</string>
    <string name="adjust_2click_speed">Adjust 2-click speed</string>
    <string name="slow">Slow</string>
    <string name="normal">Normal</string>
    <string name="fast">Fast</string>
    <string name="vibration_feedback">Vibration Feedback</string>
    <string name="vibration_feedback_subtitle">Vibrate when press Smart Key</string>
    <string name="enable_on_lock_screen">Enable on Lock Screen</string>
    <string name="enable_on_lock_screen_subtitle">Make Smart Key available on Lock Screen</string>
    <string name="one_click_switch">Smart Key switch for 1-click</string>
    <string name="one_click_switch_subtitle">Enable or disable 1-click Smart Key</string>
    <string name="camera_switch">Smart Key as a shutter</string>
    <string name="camera_switch_subtitle">Use Smart Key as a shutter in camera app.</string>

    <!-- 设置网址文案 -->
    <string name="enter_an_url">Enter an URL</string>
    <string name="setup_url_cancel">Cancel</string>
    <string name="setup_url_ok">OK</string>

    <!-- toolbar颜色 -->
    <string name="toolbar_title_text_color_choose_function">505050</string>
    <string name="toolbar_background_color_choose_function">F3F4F5</string>

    <!--工具箱文案-->
    <string name="toolbox">Toolbox</string>
    <string name="drag_to_move_the_shortcuts">Drag to move the shortcuts</string>

    <!--选择联系人文案-->
    <string name="please_select_number">Select a number</string>
    <string name="choose_contacts">Select a contact</string>
    <string name="access_the_contacts_permission_content">Please allow Smart Key access the contacts to enable 1-Click Dial.</string>
    <string name="access_the_contacts_permission_cancel">Cancel</string>
    <string name="access_the_contacts_permission_settings">Settings</string>
    <string name="access_the_dialog_permission_content">Please allow Smart Key make phone calls to enable 1-Click Dial.</string>
    <string name="access_the_dialog_permission_cancel">Cancel</string>
    <string name="access_the_dialog_permission_settings">Settings</string>

    <!--选择APPS文案-->
    <string name="choose_apps">Open an app</string>


</resources>
