<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

    <LinearLayout
        android:background="@drawable/shape_surfnet_background"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:ellipsize="marquee"
            android:singleLine="true"
            android:text="@string/enter_an_url"
            android:textColor="#505050"
            android:textSize="12sp"/>

        <EditText
            android:id="@+id/et_setup_url"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="4dp"
            android:textSize="16sp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textCursorDrawable="@drawable/color_cursor"
            android:textColor="#505050"
            android:background="@drawable/edittext_url"/>

        <ImageView
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="12dp"
            android:src="@drawable/projection_url"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="#F4F4F4"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_setup_url_cancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/setup_url_cancel"
                android:textColor="@color/setup_url_cancel_text_color"
                android:textSize="@dimen/setup_url_cancel_ok_textsize"/>

            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="#E5E5E5"/>

            <TextView
                android:id="@+id/tv_setup_url_ok"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/setup_url_ok"
                android:textColor="@color/setup_url_ok_text_color"
                android:textSize="@dimen/setup_url_cancel_ok_textsize"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#E5E5E5"/>
    </LinearLayout>
</RelativeLayout>